# deploy

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REQUIREMENT.md  SECURITY.md  deploy.spec  main.py  pyproject.toml
.deploy/: config.json
.github/: copilot-instructions.md
.github/skills/structural-refactoring-review/: SKILL.md
.github/skills/structural-refactoring-review/references/: checklist.md
.github/workflows/: ci.yml  release.yml
deploy/: __init__.py  caddy.py  config.py  diagnostic.py  docker.py  docker_push_flow.py  git.py  image_build_flow.py  image_push_flow.py  ingress.py  local.py  paths.py  proxy.py  proxy_up_flow.py  pull_flow.py  push_flow.py  remote.py  service.py  service_deploy_flow.py  service_init_flow.py  session.py  ssh.py  target.py  utils.py
deploy/monitor/: __init__.py  actions.py  app.py  collector.py  models.py
deploy/templates/: caddy_default.conf  caddy_with_tls.conf  client-skills.md  proxy_compose.yml
docs/: cli-reference.md  how-to.md
scripts/: build.sh
tests/: test_config.py  test_docker.py  test_git.py  test_git_extra.py  test_local.py  test_main.py  test_monitor_actions.py  test_monitor_collector.py  test_proxy.py  test_remote.py  test_remote_extra.py  test_service.py  test_session.py  test_ssh.py  test_ssh_extra.py  test_target.py  test_utils.py  test_utils_extra.py
