[project]
name = "deploy"
version = "0.1.0"
description = "SSH deployment CLI for Git sync, Docker image transfer, and remote proxy/service management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "textual>=0.85.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
]
